Re-name quesiton types

--- a/views/add-question.handlebars
+++ b/views/add-question.handlebars
@@ -11,13 +11,13 @@
         </div>
     <div id="addQuestionType">
         <input type="radio" id="newQuestionType" name="type" value="1" required>
-        <label for="type1">Type 1</label>
+        <label for="type1">Emotions</label>
         <input type="radio" id="newQuestionType" name="type" value="2">
-        <label for="type2">Type 2</label>
+        <label for="type2">Thoughts</label>
         <input type="radio" id="newQuestionType" name="type" value="3">
-        <label for="type3">Type 3</label>
+        <label for="type3">Confidence</label>
         <input type="radio" id="newQuestionType" name="type" value="4">
-        <label for="type3">Type 4</label>
+        <label for="type3">Consistency</label>
     </div>
     <div
         <button type="submit" id="createQuestion">Create Question</button>
