--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -1,20 +1,21 @@
 <div id="subjectProfile">
     {{> profile-chart}}
+    <p>{{subject.profile-assignment}}</p>
 
 <section id="questionType">
     <h2>Ask a Question</h2>
     <div>
     <a href="/questions/1">
-    <button id="type1">Type1</button>
+    <button id="type1">Emotions</button>
     </a>
     <a href="/questions/2">
-    <button id="type2">Type2</button>
+    <button id="type2">Thoughts</button>
     </a>
     <a href="/questions/3">
-    <button id="type3">Type3</button>
+    <button id="type3">Confidence</button>
     </a>
     <a href="/questions/4">
-    <button id="type4">Type4</button>
+    <button id="type4">Consistency</button>
     </a>
     </div>
 </section>
