Add delete subject feature

--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -1,5 +1,5 @@
-<div id="subjectProfile">
-    {{> profile-chart}}
+
+   {{> profile-chart}}
 
 <section id="questionType">
     <h2>Ask a Question</h2>
@@ -19,3 +19,8 @@
     </div>
 </section>
 {{> questiondisplay}}
+<div id="btnSubject">
+        <button id="deleteSubject">DELETE SUBJECT</button>
+    </div>
+
+<script src="/js/deleteSubject.js"></script>
