--- a/public/css/style.css
+++ b/public/css/style.css
@@ -485,3 +485,31 @@ a {
 #addQuestionType input {
   background-color: #cfdabd;
 }
+
+#btnSubject {
+  display: flex;
+  justify-content: center;
+}
+
+#btnSubject button {
+  margin-bottom: 40px;
+  background-color: var(--main);
+  color: var(--accent1);
+  font-size: 15px;
+  font-style: bold;
+  text-decoration: none;
+  padding: 10px;
+  border: 8px solid var(--accent1);
+  border-radius: 47px;
+  display: inline-block;
+  font-family: "Share Tech Mono", monospace;
+  transition: 0.3s ease;
+  box-shadow: 0px 5px 6px -1px #4d4f4c;
+  text-align: center;
+}
+
+#btnSubject button:hover {
+  color: var(--accent2);
+  border: 8px solid var(--accent2);
+  cursor: pointer;
+}
