Fix typos and add css

--- a/views/tips.handlebars
+++ b/views/tips.handlebars
@@ -20,6 +20,6 @@
     <h3>Environment and Time</h3>
     <p>Plot points can change from sustained stress, which forces adaptation. Or an immediate response to a lifechanging situation.</p>
     <p>It is estimated that 20% of the US adult population is undergoing a plotted point change.</p>
-    <h3>Learn to Read your Oppostie Traits and Types</h3>
+    <h3>Learn to Read your Opposite Traits and Types</h3>
     <p>We must first respond to the fact that people typically have difficulty reading people who possess traits different from ourselves.</p>
 </div>
