--- a/public/css/style.css
+++ b/public/css/style.css
@@ -513,3 +513,10 @@ a {
   border: 8px solid var(--accent2);
   cursor: pointer;
 }
+
+#info {
+  font-family: "Share Tech Mono", monospace;
+  font-size: 20px;
+  color: var(--accent1);
+  margin: 20px;
+}
