Fix merge conflict, update screenshot, & fix typo

--- a/views/charts.handlebars
+++ b/views/charts.handlebars
@@ -35,7 +35,7 @@ const dataConsistency = [{{#each subjects as |subject|}}
         borderWidth: 1
       },
       {
-        label: 'Cofidence',
+        label: 'Confidence',
         data: dataConfidence,
         borderWidth: 1
       },
