--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -20,7 +20,11 @@
 </section>
 {{> questiondisplay}}
 <div id="btnSubject">
-        <button id="deleteSubject">DELETE SUBJECT</button>
+        <button id="deleteSubject">DELETE SUBJECT!</button>
     </div>
-
+<div id="btnlistquestion">
+<a href="/listquestion">
+<button id="deleteSubject">List Questions</button>
+</a>
+</div>
 <script src="/js/deleteSubject.js"></script>
