delete question handlebar, add ' click to delete'

--- a/views/listquestion.handlebars
+++ b/views/listquestion.handlebars
@@ -2,7 +2,7 @@
 
 {{#each questions as |question|}}
 
-<button id="deleteQuestion" data-id="{{question.id}}"> {{question.question}}</button>
+<button id="deleteQuestion" data-id="{{question.id}}">Click to delete: {{question.question}}</button>
 
 {{/each}}
 </div>
