changed deleteSubject to call data-id in button

--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -20,7 +20,7 @@
 </section>
 {{> questiondisplay}}
 <div id="btnSubject">
-        <button id="deleteSubject">DELETE SUBJECT!</button>
+        <button id="deleteSubject" data-id="{{subject.id}}">DELETE SUBJECT!</button>
     </div>
 <div id="btnlistquestion">
 <a href="/listquestion">
